/*
  CarStandFCOOL API

  An API for managing a cloud-based car dealership service

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message Car {

  int32 carId = 1;

  int32 year = 2;

  string manufacturer = 3;

  string model = 4;

  string condition = 5;

  string cylinders = 6;

  string fuel = 7;

  int32 odometer = 8;

  string transmission = 9;

  string VIN = 10;

  string drive = 11;

  string size = 12;

  string type = 13;

  string paint_color = 14;

}
